--- a/style.css
+++ b/style.css
@@ -2,3 +2,13 @@
     filter: brightness(50%);
 
 }
+
+
+.company img {
+    width: 120px;
+    margin: 30px 20px;
+}
+
+.icon i {
+    font-size: 25px;
+}
